--- a/README.org
+++ b/README.org
@@ -41,6 +41,13 @@ its content.
 
 ** Noviembre 2022
 
+*** 09-Nov-22
++ [[https://lawrencecpaulson.github.io/2022/11/09/Hilbert-Isabelle.html][(Hilbert, Isabelle) and more universal pairs]]. ~ Marco David. #ITP #IsabelleHOL #Math
++ [[https://www.quantamagazine.org/deepmind-machine-learning-becomes-a-mathematical-collaborator-20220215/][Machine learning becomes a mathematical collaborator]]. ~ Kelsey Houston-Edwards. #Math #AI #MachineLearning
++ [[https://rebeccaskinner.net/posts/2021-08-25-introduction-to-type-level-programming.html][An introduction to type level programming]]. ~ Rebecca Skinner. #Haskell #FunctionalProgramming
++ [[https://youtu.be/dGNd0GmsYWU ~ Robertino Martínez (@_roberm_).][Haskell Course: Lesson 7: Intro to type classes]]. #Haskell #FunctionalProgramming
++ [[https://pybit.es/articles/tips-for-clean-code-in-python/][Tips for clean code in Python]]. ~ Bob Belderbos. #Python #Programming
+
 *** 08-Nov-22
 + [[https://www.tweag.io/blog/2022-11-08-functional-programming-from-sets-and-functions/][Functional programming from sets and functions]]. ~ Marco Perone. #Haskell #FunctionalProgramming
 + [[https://www.youtube.com/playlist?list=PLyrlk8Xaylp5d8nboeHcddtF8VdF5Zqp0][Videos of talks from Scheme Workshop 2022]]. #Scheme #FunctionalProgramming
