--- a/README.org
+++ b/README.org
@@ -41,6 +41,10 @@ its content.
 
 ** Noviembre 2022
 
+*** 15-Nov-22
++ [[https://www.isa-afp.org/browser_info/current/AFP/Combinatorial_Enumeration_Algorithms/document.pdf][Combinatorial enumeration algorithms (in Isabelle/HOL)]]. ~ Paul Hofmeier, Emin Karayel. #ITP #IsabelleHOL #Math #Algorithms
++ [[https://youtu.be/-wj-eCGv1D4][Formalising algebraic geometry, lecture 1/4]]. ~ Kevin Buzzard (@XenaProject). #ITP #LeanProver #Math
+
 *** 14-Nov-22
 + [[https://camilocs.substack.com/p/la-informatica-subjetiva-bajo-el?r=3vd4r][La informática subjetiva: bajo el manto del «depende»]]. ~ Camilo Chacón Sartori (@camilo_chacon_s). #Informática #Programación #MétodosFormales
 
